Added me route and logout corrected
