# src/routes/swagger.json
@@ -95,20 +95,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"UserLogout": {
-				"properties": {
-					"token": {
-						"type": "string",
-						"description": "This is a description of a special string property",
-						"example": "oi23n4OAIOES234kjdf.ksdbfi34i2bbekbq.asdi23bedsad823bws-_2"
-					}
-				},
-				"required": [
-					"token"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"UpdateProfileParams": {
 				"properties": {
 					"username": {
@@ -737,6 +723,28 @@
 				}
 			}
 		},
+		"/auth/me": {
+			"post": {
+				"operationId": "Me",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IResponse"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Auth"
+				],
+				"security": [],
+				"parameters": []
+			}
+		},
 		"/auth/logout": {
 			"post": {
 				"operationId": "Logout",
@@ -756,17 +764,7 @@
 					"Auth"
 				],
 				"security": [],
-				"parameters": [],
-				"requestBody": {
-					"required": true,
-					"content": {
-						"application/json": {
-							"schema": {
-								"$ref": "#/components/schemas/UserLogout"
-							}
-						}
-					}
-				}
+				"parameters": []
 			}
 		},
 		"/auth/profile/update": {
